prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/lex_errors/hex_digits_expected.nut
// EXPECT_ERROR: "expected hex digits after '0x'"
let x = 0xGG
